force-app/main/default/objects/DocuSign_Fields__c/DocuSign_Fields__c.object-meta.xml
<CustomObject>
    <label>DocuSign Fields</label>
    <nameField>
        <displayFormat>DFN-{0000000}</displayFormat>
        <label>DocuSign_Fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Fields</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>