force-app/main/default/objects/DocuSign_Fields__c/fields/Application_No__c.field-meta.xml
<CustomField>
    <fullName>Application_No__c</fullName>
    <label>Application No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>