force-app/main/default/objects/DocuSign_Fields__c/fields/DocketNo__c.field-meta.xml
<CustomField>
    <fullName>DocketNo__c</fullName>
    <label>DocketNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>