force-app/main/default/objects/DocuSign_Fields__c/fields/Is_Application_Filed__c.field-meta.xml
<CustomField>
    <fullName>Is_Application_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApplicationFiled</label>
    <type>Checkbox</type>
</CustomField>