force-app/main/default/objects/DocuSign_Fields__c/fields/IsNot_Application_Filed__c.field-meta.xml
<CustomField>
    <fullName>IsNot_Application_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNot Application Filed?</label>
    <type>Checkbox</type>
</CustomField>